Add dynamic list of tags to the endpoint of onboarding